# academy-linker

./: .env.example  .gitignore  LICENSE  README.md  README.zh.md  mock_server.py
backend/: .env.example  .gitignore  Containerfile  DEPLOY.md  compose.yaml  entrypoint.sh  pyproject.toml
backend/src/ac_link/: run.py
backend/src/ac_link/api/: admin_api.py  ai_api.py  announcement_api.py  auth_api.py  discussion_api.py  me_api.py  parent_api.py  report_api.py  resource_api.py  settings_api.py  teacher_api.py  translation_api.py  tts_api.py
backend/src/ac_link/common/: deps.py  exceptions.py
backend/src/ac_link/config/: config.py
backend/src/ac_link/crud/: admin.py  ai.py  discussion.py  metrics.py  parent.py  resource.py  score.py  session.py  teacher.py  timetable.py  translation.py  user.py  welfare.py
backend/src/ac_link/db/: README.md  __init__.py  add_user.py  compose.yaml  db.py  init_admin.py  podman-dev.sh
backend/src/ac_link/dto/: admin.py  auth.py  discussion.py  options.py  parent.py  resource.py  settings.py  teacher.py  timetable.py  tts.py
backend/src/ac_link/middleware/: request_timing.py
backend/src/ac_link/services/: auth_service.py  openai_service.py  translation_helpers.py  tts_service.py
backend/src/ac_link/test/: README.md  admin_test.py  conftest.py  login_test.py  test_admin.py  test_ai.py  test_auth.py  test_discussion.py  test_me.py  test_parent.py  test_request_timing.py  test_resource.py  test_teacher.py  test_tts.py
backend/src/docs/: academy_linker_db_design_v1.md  api_design_v1.md  db_schema_design_v1.md
(+219 files in other folders)
