[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "email-validator>=2.0",
    "fastapi>=0.135.3",
    "openai>=2.30.0",
    "passlib[bcrypt]==1.7.4",
    "psycopg>=3.3.3",
    "pydantic-settings>=2.7",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "uvicorn[standard]>=0.43.0",
]
